--- a/scripts/afl/PKGBUILD
+++ b/scripts/afl/PKGBUILD
@@ -17,9 +17,13 @@ provides=('american-fuzzy-lop')
 replaces=('american-fuzzy-lop')
 options=('!emptydirs' '!strip')
 source=(${pkgname}-${pkgver}.tgz::http://lcamtuf.coredump.cx/${pkgname}/releases/${pkgname}-${pkgver}.tgz)
+sha512sums=('0df37fc8dea65d4130bc0fc8aaa23525bde4832c7202efb78ebe740d661546adee575b48fb94d851ef26293ca28a6ff818ab1dfd643c8e688aceb520e11229d0')
 
 prepare() {
-  cd ${pkgname}-${pkgver}/qemu_mode
+  rm ${srcdir}/../${pkgname}-${pkgver}.tgz
+  cp ${srcdir}/../${pkgname}-${pkgver}.diff .
+  cp ${srcdir}/../qemu-2.8.0.diff ${pkgname}-${pkgver}/qemu_mode/patches
+  patch -p0 < ${pkgname}-${pkgver}.diff
 }
 
 build() {
