--- a/scripts/pkgs/afl/PKGBUILD
+++ b/scripts/pkgs/afl/PKGBUILD
@@ -16,13 +16,14 @@ makedepends=('gcc' 'wget' 'python' 'python2' 'libtool' 'automake' 'autoconf' 'co
 provides=('american-fuzzy-lop')
 replaces=('american-fuzzy-lop')
 options=('!emptydirs' '!strip')
-source=(${pkgname}-${pkgver}.tgz::http://lcamtuf.coredump.cx/${pkgname}/releases/${pkgname}-${pkgver}.tgz)
+source=('${pkgname}-${pkgver}.tgz::http://lcamtuf.coredump.cx/${pkgname}/releases/${pkgname}-${pkgver}.tgz'
+        'qemu-2.8.0.diff'
+        '${pkgname}-${pkgver}.diff')
 sha512sums=('0df37fc8dea65d4130bc0fc8aaa23525bde4832c7202efb78ebe740d661546adee575b48fb94d851ef26293ca28a6ff818ab1dfd643c8e688aceb520e11229d0')
 
 prepare() {
-  rm ${srcdir}/../${pkgname}-${pkgver}.tgz
-  cp ${srcdir}/../${pkgname}-${pkgver}.diff .
-  cp ${srcdir}/../qemu-2.8.0.diff ${pkgname}-${pkgver}/qemu_mode/patches
+  rm ${srcdir}/${pkgname}-${pkgver}.tgz
+  mv ${srcdir}/qemu-2.8.0.diff ${srcdir}/${pkgname}-${pkgver}/qemu_mode/patches
   patch -p0 < ${pkgname}-${pkgver}.diff
 }
 
