--- a/scripts/pkgs/flawfinder/PKGBUILD
+++ b/scripts/pkgs/flawfinder/PKGBUILD
@@ -16,6 +16,7 @@ sha256sums=('bca7256fdf71d778eb59c9d61fc22b95792b997cc632b222baf79cfc04887c30')
 provides=('flawfinder')
 
 prepare(){
+  rm -f $(readlink ${pkgname}-${pkgver}.tar.gz)
   cd "${srcdir}/flawfinder-${pkgver}"
   sed -i 's/env python/env python2/' flawfinder
 }
