--- a/scripts/pkgs/afl/PKGBUILD
+++ b/scripts/pkgs/afl/PKGBUILD
@@ -16,13 +16,15 @@ makedepends=('gcc' 'wget' 'python' 'python2' 'libtool' 'automake' 'autoconf' 'co
 provides=('american-fuzzy-lop')
 replaces=('american-fuzzy-lop')
 options=('!emptydirs' '!strip')
-source=('${pkgname}-${pkgver}.tgz::http://lcamtuf.coredump.cx/${pkgname}/releases/${pkgname}-${pkgver}.tgz'
-        'qemu-2.8.0.diff'
-        '${pkgname}-${pkgver}.diff')
-sha512sums=('0df37fc8dea65d4130bc0fc8aaa23525bde4832c7202efb78ebe740d661546adee575b48fb94d851ef26293ca28a6ff818ab1dfd643c8e688aceb520e11229d0')
+source=(${pkgname}-${pkgver}.tgz::http://lcamtuf.coredump.cx/${pkgname}/releases/${pkgname}-${pkgver}.tgz
+        qemu-2.8.0.diff
+        ${pkgname}-${pkgver}.diff)
+sha512sums=('0df37fc8dea65d4130bc0fc8aaa23525bde4832c7202efb78ebe740d661546adee575b48fb94d851ef26293ca28a6ff818ab1dfd643c8e688aceb520e11229d0'
+            '2ff7222ef250e4804f466f95952b6e5951c5e801d37fe9a126c00254f1837e199d9c30e5610ef5fb7b379a1e354b812a656d76d51b0f7a182960c5fafbfe7ac9'
+            '8d2b924b0bcc083b5ee9af539d116f7dc744b72e92c4bc67347d650f8c2820e36429a81acde1b7ddc652eb45ceecf03469eba129659cec84b734842a6e266cbe')
 
 prepare() {
-  rm ${srcdir}/${pkgname}-${pkgver}.tgz
+  rm -f $(readlink ${pkgname}-${pkgver}.tgz)
   mv ${srcdir}/qemu-2.8.0.diff ${srcdir}/${pkgname}-${pkgver}/qemu_mode/patches
   patch -p0 < ${pkgname}-${pkgver}.diff
 }
