--- a/scripts/pkgs/snowman/PKGBUILD
+++ b/scripts/pkgs/snowman/PKGBUILD
@@ -9,7 +9,7 @@ arch=('i686' 'x86_64')
 license=('GPLv3')
 depends=()
 makedepends=('gcc' 'cmake' 'boost' 'qt5-base')
-source=('${pkgname}::git+https://github.com/nihilus/snowman.git')
+source=(${pkgname}::git+https://github.com/nihilus/snowman.git)
 sha512sums=('SKIP')
 
 build() {
